# uhim-dict

./: .gitignore  README.md  package.yaml  stack.yaml  tutcode-dictionary.cabal  uhim-dict.cabal
app/: Main.hs
data/: dict-ja-prop.yaml  dict-ja.yaml  dicttool.vim  joyo.yaml  kana-ext.yaml  kana.yaml  non-joyo.yaml  symbol-ext.yaml
data/template/: publish-latex.tex
examples/: dict.yaml
src/: Commandline.hs  Main.hs
src/Dictionary/: Yaml.hs
src/Dictionary/SKK/: SKKExtended.hs
src/Dictionary/Transform/: TUTYomi.hs
src/Dictionary/Yaml/Japanese/: Prim.hs  Verb.hs
src/Language/UHIM/Dictionary/: Yaml.hs
src/Language/UHIM/Dictionary/Keybind/: TcEl.hs  Vim.hs
src/Language/UHIM/Dictionary/Publish/: LaTeX.hs
src/Language/UHIM/Dictionary/SKK/: SKKExtended.hs
src/Language/UHIM/Dictionary/Source/: Jion.hs
src/Language/UHIM/Dictionary/Transform/: TUTYomi.hs  TcEl.hs  Tcvime.hs  Variants.hs
src/Language/UHIM/Dictionary/Yaml/: Comparator.hs  Prim.hs
src/Language/UHIM/Japanese/: Adjective.hs  Collator.hs  Prim.hs  Transform.hs  Verb.hs
test/Language/UHIM/Dictionary/: YamlSpec.hs
test/Language/UHIM/Japanese/: CollatorSpec.hs  PrimSpec.hs  TransformSpec.hs
