name:                uhim-dict
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             GPL-3
license-file:        LICENSE
author:              na4zagin3
maintainer:          mrty.ityt.pt@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable uhim-dict
  main-is:             Main.hs
  other-modules:       
    Language.UHIM.Japanese.Prim
    Language.UHIM.Japanese.Adjective
    Language.UHIM.Japanese.Verb
    Language.UHIM.Dictionary.SKK.SKKExtended
    Language.UHIM.Dictionary.Yaml
    Language.UHIM.Dictionary.Yaml.Prim
    Language.UHIM.Dictionary.Transform.TUTYomi
    Language.UHIM.Dictionary.Transform.Variants
    Language.UHIM.Dictionary.Source.Jion
    Language.UHIM.Dictionary.Publish.LaTeX
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
                     , containers >=0.5 && <0.6
                     -- , mtl >=2.2 && <2.3
                     , parsec >=3.1 && <3.2
                     , lens >=4.13 && <4.14
                     , yaml >=0.8 && <0.9
                     , text >=1.2 && <1.3
                     , vector >=0.11 && <0.12
                     , aeson >=0.11 && <0.12
                     , bytestring >=0.10 && <0.12
                     , utf8-string >=1.0 && <1.1
                     , cassava >=0.4 && <0.5
                     , optparse-applicative >= 0.12 && < 0.13

  hs-source-dirs:      src
  default-language:    Haskell2010
